# waffle

./: .gitignore
cmake/Modules/: WafflePrintConfigurationSummary.cmake  WaffleValidateOptions.cmake
dev-tools/: waffle-maint  wfl-make-release-email  wfl-stats
doc/: how-to-maintain-waffle.adoc.txt
doc/release-notes/: waffle-1.4.0.txt  waffle-1.5.2.txt  waffle-next.txt
examples/: gl_basic.c
include/waffle/: waffle.h
man/: waffle_enum.3.xml
src/utils/: CMakeLists.txt  wfl-swapinterval.c
src/waffle/: CMakeLists.txt
src/waffle/core/: wcore_util.c  wcore_util.h
src/waffle/egl/: wegl_config.c  wegl_display.c  wegl_display.h  wegl_platform.c  wegl_platform.h
src/waffle/gbm/: wgbm_platform.h
src/waffle/glx/: glx_config.c  glx_context.c  glx_display.c  glx_platform.c  glx_platform.h  glx_window.c  glx_wrappers.h
src/waffle/null/: wnull_buffer.c  wnull_buffer.h  wnull_display.c  wnull_platform.c  wnull_window.c
